--- a/index.html
+++ b/index.html
@@ -130,9 +130,13 @@
       <span id="importStatus" aria-live="polite"></span>
     </div>
     <!-- hidden actual file input (import de tous gpx)-->
-    <input id="importFile" type="file"
-  accept=".gpx,application/gpx+xml,application/octet-stream,text/xml,application/xml"
-  capture="filesystem"style="display:none;"aria-hidden="true">
+    <input 
+  type="file" 
+  id="importFile" 
+  accept=".gpx,application/gpx+xml,application/xml,text/xml,application/octet-stream"
+style="display:none;"
+  aria-hidden="true"
+  />
 
   </div>
 
