--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <div id="startupPopup" style="position:fixed;inset:0;background:rgba(0,0,0,0.6);display:none;align-items:center;justify-content:center;z-index:5000;font-family:Arial;">
     <div style="background:#fff;padding:18px;border-radius:12px;max-width:340px;text-align:left;box-shadow:0 6px 20px rgba(0,0,0,0.25);">
       <h3 style="margin:0 0 6px 0;">👋 Bienvenue</h3>
-      <p style="margin:0 0 8px 0;font-size:13px;color:#333;">Version 6.6.4. Activez le GPS pour un suivi optimal. Si les GPX semblent non reconnus sur mobile, utilisez le bouton “Importer GPX”.</p>
+      <p style="margin:0 0 8px 0;font-size:13px;color:#333;">Version 6.6.4. Activez le GPS pour un suivi optimal. GPX reconnus sur mobile, utilisez le bouton “Importer GPX”.</p>
       <div style="text-align:right"><button onclick="closeStartupPopup()" style="background:var(--accent);color:#fff;border:none;padding:8px 12px;border-radius:8px;cursor:pointer;">OK</button></div>
     </div>
   </div>
